--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Resume</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
   </head>
   <body>
-  <h1>Resumebuilding</h1>
-  </body>
+  <div class="main">
+    <div class="profile">
+      <img src="pooji.png" alt="pooji">
+      <h3>pooji</h3>
+      <div class="address">
+      </div>
+      <a href="mailto:sreepoojitha555@gmail.com">sreepoojitha555@gmail.com</a>
+      <h3>9678456562</h3>
+      <h3>pooji</h3>
+      <div class="address">
+<h1>Address</h1>
+<hr>
+<p>SVIT college</p>
+    </div>
+  </div>
+    <div class="content">
+      <h1>Career objective</h1> <hr>
+</div>
+</div>
+<script type="text/javascript" src="main.js">
+</script>
+</body>
 </html>
